update client + makefile

--- a/03/Makefile
+++ b/03/Makefile
@@ -1,10 +1,13 @@
 CXX       := /usr/bin/g++
 CXX_FLAGS := -std=c++17 -Wall -Wextra -Wpedantic -fdiagnostics-color=always -O2 -g
 
-main.exe: 03_client.cpp 03_server.cpp
+all: client.exe server.exe
+
+client.exe: 03_client.cpp
 	$(CXX) $(CXX_FLAGS) $^ -o $@
 
-run: ./03_server.exe ./03_client.exe
+server.exe: 03_server.cpp
+	$(CXX) $(CXX_FLAGS) $^ -o $@
 
 clean:
 	rm -f *.exe
