finished: client + server
should be working good, except for the msg the client reseaves. it gets one additional letter for some reason, but at localhost:1234 it is correct

--- a/03/Makefile
+++ b/03/Makefile
@@ -1,5 +1,6 @@
 CXX       := /usr/bin/g++
-CXX_FLAGS := -std=c++17 -Wall -Wextra -Wpedantic -fdiagnostics-color=always -O2 -g
+CXX_FLAGS := -std=c++17 -Wall -Wextra -O2 -g
+#-Wpedantic -fdiagnostics-color=always
 
 all: client.exe server.exe
 
